[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/UI/LoadOut/LoadOut.gd" type="Script" id=1]
[ext_resource path="res://Assets/images/UI/bars/healthbar.png" type="Texture" id=2]
[ext_resource path="res://scenes/UI/LoadOut/LevelUPBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/UI/ui_under/Ui_Under.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/UI/LoadOut/GoldSign.tscn" type="PackedScene" id=5]

[node name="LoadOut" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1080, 720 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1080.0
margin_bottom = 1920.0

[node name="GoldSign" parent="." instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -7.0
margin_right = 293.0
margin_bottom = 120.0

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1020.0
alignment = 2

[node name="HBox" type="HBoxContainer" parent="VBox"]
margin_right = 1080.0
margin_bottom = 900.0
rect_min_size = Vector2( 0, 900 )
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBox/HBox"]
margin_right = 726.0
margin_bottom = 900.0
size_flags_horizontal = 3
expand = true
stretch_mode = 5

[node name="LevelUpBox" parent="VBox/HBox" instance=ExtResource( 3 )]

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_top = 916.0
margin_right = 1080.0
margin_bottom = 936.0
rect_min_size = Vector2( 1080, 20 )
value = 50.0
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.952941, 0.462745, 0.172549, 1 )
nine_patch_stretch = true

[node name="Ui_Under" parent="." instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 940.0
margin_right = 1080.0
margin_bottom = 1920.0
rect_min_size = Vector2( 0, 980 )

[connection signal="loadChars" from="." to="Ui_Under" method="load_characters"]
[connection signal="needDescription" from="." to="Ui_Under" method="set_description"]
[connection signal="setCharcterActive" from="." to="Ui_Under" method="set_active_character"]
[connection signal="back" from="Ui_Under" to="." method="_on_Ui_Under_back"]
[connection signal="selected_character" from="Ui_Under" to="." method="load_character"]
